--- a/crosscompute_audio/type.jinja2
+++ b/crosscompute_audio/type.jinja2
@@ -9,7 +9,7 @@
 {% macro render_property(request, data_item, stamp='') %}
 <div class="cc-audio">
 <audio controls>
-<source src="{{ data_item.render_value() }}">
+<source src="{{ base_url.rstrip('/') + data_item.render_value() }}">
 Your browser does not support the audio element.
 </audio>
 </div>
