--- a/crosscompute_audio/type.jinja2
+++ b/crosscompute_audio/type.jinja2
@@ -7,7 +7,7 @@
 {% macro render_argument(request, data_item) %}{% endmacro %}
 
 {% macro render_property(request, data_item, stamp='') %}
-<div class="cc-audio">
+<div class="crosscompute-audio">
 <audio controls>
 <source src="{{ base_url.rstrip('/') + data_item.render_value() }}">
 Your browser does not support the audio element.
